Change the font size in the invoice overview table, to prevent awkward styling when a company name is too long

--- a/src/assets/sass/components/invoice.sass
+++ b/src/assets/sass/components/invoice.sass
@@ -24,7 +24,7 @@
 
   .invoice-overview
     tr
-      font-size: 0.7rem
+      font-size: 0.6rem
 
       .label
         padding: 0.6em
@@ -33,7 +33,7 @@
         border-radius: 5px
 
       button
-        font-size: 0.7rem
+        font-size: 0.6rem
         margin-bottom: 0
 
   #invoice-details
